fix(range-input): make prefix text nowrap & keep horizontal padding consistent

--- a/style/web/components/range-input/_index.less
+++ b/style/web/components/range-input/_index.less
@@ -60,6 +60,11 @@
       border-radius: @border-radius-small;
     }
 
+    // label 文字不换行
+    & > .@{prefix}-input__prefix {
+      white-space: nowrap;
+    }
+
     .@{prefix}-input {
       padding: @range-input-inner-padding;
       height: 100%;
