--- a/style/web/components/range-input/_var.less
+++ b/style/web/components/range-input/_var.less
@@ -34,7 +34,7 @@
 @range-input-extra-color-error: @error-color;
 
 // 间距
-@range-input-padding-default: @comp-paddingTB-xs @comp-paddingLR-s @comp-paddingTB-xs @comp-paddingLR-xs;
+@range-input-padding-default: @comp-paddingTB-xs @comp-paddingLR-s @comp-paddingTB-xs @comp-paddingLR-s;
 @range-input-status-position-right: calc(0px - @comp-margin-xxxl);
 @range-input-inner-gap: @comp-margin-s;
 @range-input-inner-padding: 0 @comp-paddingLR-xs;
